<resources>
    <string name="app_name">TechNews</string>
    <string name="no_articles">No articles to display.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Feed Settings</string>
    <string name="settings_order_by">Order By</string>
    <string name= "settings_search_label">Keywords</string>
    <string name="settings_search_key" translatable="false">search</string>
    <string name="settings_search_default">Technology</string>
    <string name="settings_size_label">Number of Results</string>
    <string name="settings_size_key">size</string>
    <string name="settings_size_default">15</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_relevance_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">newest</string>
</resources>
